[package]
name = "channelmap"
version = "0.1.0"
edition = "2024"
description = "A DashMap wrapper over Tokio channels"
license = "MIT"
repository = "https://github.com/some100/channelmap"
readme = "README.md"

[dependencies]
dashmap = "6.1.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "macros"] }