[package]
name = "channelmap"
version = "0.3.0"
edition = "2024"
description = "A DashMap wrapper over Tokio channels"
license = "MIT"
repository = "https://github.com/some100/channelmap"
readme = "README.md"
keywords = ["channels", "async", "concurrency", "mpsc"]
categories = ["asynchronous", "concurrency"]

[dependencies]
dashmap = "6.1.0"
flume = "0.11.1"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "macros"] }